--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "react_animation",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://grey4uk.github.io/rn_animation/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -18,7 +17,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "netlify deploy -p"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,5 +33,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/grey4uk/rn_animation.git",
+  "author": "grey4uk <grey4uk14@gmail.com>",
+  "license": "MIT"
 }
